--- a/Huixiang/Huixiang-Info.plist
+++ b/Huixiang/Huixiang-Info.plist
@@ -49,6 +49,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.4.0</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
