improve writing view

--- a/Huixiang/Huixiang-Info.plist
+++ b/Huixiang/Huixiang-Info.plist
@@ -81,7 +81,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>ui</key>
-	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>typeicons.ttf</string>
+	</array>
 </dict>
 </plist>
